--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Vim swap files
+*.swp
+
+# node js modules
+node_modules
